; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_sndmac.c_SNDMacGetAudioSpace.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_sndmac.c_SNDMacGetAudioSpace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@write_pos = common dso_local global i64 0, align 8
@read_pos = common dso_local global i64 0, align 8
@BUFFER_LEN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @SNDMacGetAudioSpace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SNDMacGetAudioSpace() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i64, i64* @write_pos, align 8
  %3 = load i64, i64* @read_pos, align 8
  %4 = icmp sgt i64 %2, %3
  br i1 %4, label %5, label %12

5:                                                ; preds = %0
  %6 = load i64, i64* @BUFFER_LEN, align 8
  %7 = load i64, i64* @write_pos, align 8
  %8 = sub nsw i64 %6, %7
  %9 = load i64, i64* @read_pos, align 8
  %10 = add nsw i64 %8, %9
  %11 = trunc i64 %10 to i32
  store i32 %11, i32* %1, align 4
  br label %17

12:                                               ; preds = %0
  %13 = load i64, i64* @read_pos, align 8
  %14 = load i64, i64* @write_pos, align 8
  %15 = sub nsw i64 %13, %14
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %12, %5
  %18 = load i32, i32* %1, align 4
  %19 = ashr i32 %18, 2
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
